--- a/CreateClass/WpfApp4/App.xaml
+++ b/CreateClass/WpfApp4/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="TimerEvents.App"
+﻿<Application x:Class="WpfApp4.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TimerEvents"
+             xmlns:local="clr-namespace:WpfApp4"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
